# route-forecast

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  create-api-clients.sh
location-forecast-client/: Cargo.toml  README.md
location-forecast-client/.openapi-generator/: FILES
location-forecast-client/docs/: DataApi.md  Forecast.md  ForecastMeta.md  ForecastSummary.md  ForecastTimeInstant.md  ForecastTimePeriod.md  ForecastTimeStep.md  ForecastTimeStepData.md  ForecastTimeStepDataInstant.md  ForecastTimeStepDataNext12Hours.md  ForecastTimeStepDataNext1Hours.md  ForecastTimeStepDataNext6Hours.md  ForecastUnits.md  MetadataApi.md  MetjsonForecast.md  PointGeometry.md  WeatherSymbol.md
location-forecast-client/src/apis/: configuration.rs  data_api.rs  metadata_api.rs  mod.rs
location-forecast-client/src/models/: forecast.rs  forecast_meta.rs  forecast_summary.rs  forecast_time_instant.rs  forecast_time_period.rs  forecast_time_step.rs  forecast_time_step_data.rs  forecast_time_step_data_instant.rs  forecast_time_step_data_next_12_hours.rs  forecast_time_step_data_next_1_hours.rs  forecast_time_step_data_next_6_hours.rs  forecast_units.rs  metjson_forecast.rs  mod.rs  point_geometry.rs  weather_symbol.rs
ors-client/: Cargo.toml  README.md
ors-client/.openapi-generator/: FILES
ors-client/docs/: AlternativeRoutes.md  BoundingBox.md  DirectionsService.md  DirectionsServiceApi.md  DirectionsServiceCustomModel.md  DirectionsServiceCustomModelAreasValue.md  DirectionsServiceCustomModelAreasValueGeometry.md  DirectionsServiceCustomModelSpeedInner.md  ElevationApi.md  ElevationLinePost200Response.md  ElevationLinePost200ResponseGeometry.md  ElevationLinePostRequest.md  ElevationPointGet200Response.md  ElevationPointGet200ResponseGeometry.md  ElevationPointPostRequest.md  EngineInfo.md  ExportServiceApi.md  GeoJsonFeature.md  GeoJsonFeatureProperties.md  GeoJsonIsochroneBase.md  GeoJsonIsochronesResponse.md  GeoJsonPointGeometry.md  GeoJsonRouteResponse.md  GeoJsonSnappingResponse.md  GeocodeApi.md  GeocodeResponse.md  Geometry.md  GetDefault1200Response.md  GetDefault1200ResponseDestinationsInner.md  GetDefault1200ResponseMetadata.md  GetDefault1200ResponseSourcesInner.md  GetDefault1Request.md  GetDefault200Response.md  GetDefault200ResponseLocationsInner.md  GetDefault200ResponseMetadata.md  GetDefault200ResponseMetadataEngine.md  GetDefault2200Response.md  GetDefault2200ResponseEdgesExtraInner.md  GetDefault2200ResponseEdgesInner.md  GetDefault2200ResponseNodesInner.md  (+101 more)
ors-client/src/apis/: configuration.rs  directions_service_api.rs  elevation_api.rs  export_service_api.rs  geocode_api.rs  health_service_api.rs  isochrones_service_api.rs  matching_service_api.rs  matrix_service_api.rs  mod.rs  optimization_api.rs  snapping_service_api.rs  status_service_api.rs
ors-client/src/models/: _elevation_line_post_200_response.rs  _elevation_line_post_200_response_geometry.rs  _elevation_line_post_request.rs  _elevation_point_get_200_response.rs  _elevation_point_get_200_response_geometry.rs  _elevation_point_post_request.rs  _optimization_post_200_response.rs  _optimization_post_200_response_routes_inner.rs  _optimization_post_200_response_routes_inner_steps_inner.rs  _optimization_post_200_response_summary.rs  _optimization_post_200_response_summary_violations_inner.rs  _optimization_post_200_response_unassigned_inner.rs  _optimization_post_request.rs  _optimization_post_request_jobs_inner.rs  _optimization_post_request_matrices.rs  _optimization_post_request_matrices_driving_car.rs  _optimization_post_request_options.rs  _optimization_post_request_vehicles_inner.rs  _optimization_post_request_vehicles_inner_breaks_inner.rs  _optimization_post_request_vehicles_inner_costs.rs  _optimization_post_request_vehicles_inner_steps_inner.rs  alternative_routes.rs  bounding_box.rs  directions_service.rs  directions_service_custom_model.rs  directions_service_custom_model_areas_value.rs  directions_service_custom_model_areas_value_geometry.rs  directions_service_custom_model_speed_inner.rs  engine_info.rs  geo_json_feature.rs  geo_json_feature_properties.rs  geo_json_isochrone_base.rs  geo_json_isochrones_response.rs  geo_json_point_geometry.rs  geo_json_route_response.rs  geo_json_snapping_response.rs  geocode_response.rs  geometry.rs  get_default_1_200_response.rs  get_default_1_200_response_destinations_inner.rs  (+91 more)
proto/: route-forecast.proto
src/: geo_json_200_response.rs  lib.rs  main.rs
src/client/: client.rs
src/proto/: mod.rs
src/server/: forecast.rs  geo_json_200_response.rs  mod.rs  place.rs  routing.rs
src/wasm/: mod.rs
stedsnavn-client/: Cargo.toml  README.md
stedsnavn-client/.openapi-generator/: FILES
stedsnavn-client/docs/: DefaultApi.md  Fylker.md  GeoJsonCoords.md  GeoJsonGeometry.md  Kommuner.md  Metadata.md  Navneobjekttype.md  Punkt.md  Representasjonspunkt.md  ReturPunkt.md  ReturSkrivemate.md  ReturSted.md  Skrivemate.md  SkrivemateJson.md  Sok.md  Sprak.md
stedsnavn-client/src/apis/: configuration.rs  default_api.rs  mod.rs
stedsnavn-client/src/models/: fylker.rs  geo_json_coords.rs  geo_json_geometry.rs  kommuner.rs  metadata.rs  mod.rs  navneobjekttype.rs  punkt.rs  representasjonspunkt.rs  retur_punkt.rs  retur_skrivemate.rs  retur_sted.rs  skrivemate.rs  skrivemate_json.rs  sok.rs  sprak.rs
