[package]
name = "weather-route"
version = "0.1.0"
edition = "2024"

[dependencies]
http-cache-reqwest = { version = "0.16"}
location-forecast-client = { version = "2.0.0", path = "location-forecast-client" }
ors-client = { version = "2.0.0", path = "ors-client" }
reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
