[package]
name = "weather-route"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "route-forecast-server"
path = "src/main.rs"

[features]
# No implicit server deps — avoids mio in wasm
default = []

# Enable this when building a wasm client
wasm = ["tonic-web-wasm-client", "tonic/codegen", "tonic-prost"]

# Enable this when building the gRPC server
server = [
    "tonic",
    "tonic/transport",
    "tonic/router",
    "tonic/server",
    "tonic/tls-aws-lc",
    "tonic-prost",
    "tonic-reflection",
    "tokio",
    "tokio/rt-multi-thread",
    "http-cache-reqwest",
    "tonic-web",
    "tower-http",
  "rustls",
]

[dependencies]
chrono = "0.4.42"
http = "1.3.1"
http-cache-reqwest = {version = "0.16", optional=true}
prost = "0.14.1"
prost-types = "0.14.1"

reqwest = "0.12.24"
reqwest-middleware = "0.4.2"
rustls = {version = "0.23.35", optional = true }

serde = { version = "1.0.228", features = ["serde_derive"] }

# --- Optional Server Stack (enabled only with `--features server`) ---
tokio = { version = "1.46.0", optional = true, default-features= false, features = ["macros"] }
tonic = { version = "0.14.2", optional = true, default-features=false}
tonic-prost = { version = "0.14.2", optional = true }
tonic-reflection = { version = "0.14.2", optional = true }
tonic-web = {version = "0.14.2", optional=true}

# --- Optional WASM Stack (enabled only with `--features wasm`) ---
tonic-web-wasm-client = { version = "0.8.0", optional = true }
tower-http = {version = "0.6.6", optional = true, features = ["cors"]}


[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
serde_json = "1.0.145"
